add logging/disable zgc